--- a/app/src/main/res/layout/c_pro_book.xml
+++ b/app/src/main/res/layout/c_pro_book.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -14,9 +14,13 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginStart="86dp"
-
-        android:layout_marginTop="56dp">
+        android:layout_marginStart="92dp"
+        android:layout_marginTop="50dp"
+        android:layout_marginEnd="92dp"
+        app:layout_constraintBottom_toTopOf="@+id/c_thecprolan"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <TextView
             android:layout_width="match_parent"
@@ -37,8 +41,13 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginStart="89dp"
-        android:layout_marginTop="284dp">
+        android:layout_marginStart="92dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="92dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/c_letusc"
+        app:layout_constraintVertical_chainStyle="spread">
 
         <TextView
             android:layout_width="match_parent"
@@ -58,9 +67,14 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginStart="90dp"
 
-        android:layout_marginTop="516dp">
+        android:layout_marginBottom="50dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.508"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/c_thecprolan"
+        app:layout_constraintVertical_bias="0.0">
 
         <TextView
             android:layout_width="match_parent"
@@ -74,4 +88,82 @@
     </soup.neumorphism.NeumorphCardView>
 
 
-</RelativeLayout>
+    <!--    <GridLayout-->
+    <!--        android:layout_width="match_parent"-->
+    <!--        android:layout_height="0dp"-->
+    <!--        android:layout_weight="1"-->
+    <!--        android:columnCount="1"-->
+    <!--        android:layout_margin="@dimen/_40sdp"-->
+    <!--        android:alignmentMode="alignMargins"-->
+    <!--        android:rowOrderPreserved="false"-->
+    <!--        android:useDefaultMargins="true">-->
+
+    <!--        &lt;!&ndash; Card 1 - &ndash;&gt;-->
+    <!--        <soup.neumorphism.NeumorphCardView-->
+    <!--            android:layout_width="0dp"-->
+    <!--            android:layout_height="wrap_content"-->
+    <!--            android:layout_columnWeight="1"-->
+    <!--            android:id="@+id/c_letusc"-->
+    <!--            android:layout_rowWeight="1"-->
+    <!--            -->
+    <!--            >-->
+
+    <!--                    <TextView-->
+    <!--                        android:layout_width="match_parent"-->
+    <!--                        android:layout_height="match_parent"-->
+    <!--                        android:gravity="center"-->
+    <!--                        android:text="Let Us C"-->
+    <!--                        android:fontFamily="cursive"-->
+    <!--                        android:textSize="30sp"-->
+    <!--                       android:textColor="@color/black" />-->
+    <!--           -->
+    <!--        </soup.neumorphism.NeumorphCardView>-->
+
+    <!--        -->
+    <!--        &lt;!&ndash; Card 2 -  &ndash;&gt;-->
+    <!--        <soup.neumorphism.NeumorphCardView-->
+    <!--            android:layout_width="0dp"-->
+    <!--            android:layout_height="wrap_content"-->
+    <!--            android:layout_columnWeight="1"-->
+    <!--            android:id="@+id/c_thecprolan"-->
+    <!--            android:layout_rowWeight="1"-->
+
+    <!--            >-->
+
+    <!--            <TextView-->
+    <!--                android:layout_width="match_parent"-->
+    <!--                android:layout_height="match_parent"-->
+    <!--                android:gravity="center"-->
+    <!--                android:text="Let Us C"-->
+    <!--                android:fontFamily="cursive"-->
+    <!--                android:textSize="30sp"-->
+    <!--                android:textColor="@color/black" />-->
+
+    <!--        </soup.neumorphism.NeumorphCardView>-->
+
+    <!--        &lt;!&ndash; Card 3 -  &ndash;&gt;-->
+    <!--        <soup.neumorphism.NeumorphCardView-->
+    <!--            android:layout_width="0dp"-->
+    <!--            android:layout_height="wrap_content"-->
+    <!--            android:layout_columnWeight="1"-->
+    <!--            android:id="@+id/c_tutorialpoint"-->
+    <!--            android:layout_rowWeight="1"-->
+
+    <!--            >-->
+
+    <!--            <TextView-->
+    <!--                android:layout_width="match_parent"-->
+    <!--                android:layout_height="match_parent"-->
+    <!--                android:gravity="center"-->
+    <!--                android:text="Let Us C"-->
+    <!--                android:fontFamily="cursive"-->
+    <!--                android:textSize="30sp"-->
+    <!--                android:textColor="@color/black" />-->
+
+    <!--        </soup.neumorphism.NeumorphCardView>-->
+
+
+    <!--    </GridLayout>-->
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
