--- a/app/src/main/res/layout/dm.xml
+++ b/app/src/main/res/layout/dm.xml
@@ -1,124 +1,112 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="Sem.Paper_study_notes.sem5.DM">
-    <RelativeLayout
-        android:id="@+id/first"
+    android:orientation="vertical"
+    android:padding="12dp"
+    tools:context="Sem.Paper_study_notes.sem5.DM"
+    android:background="@color/neumorphism_background">
+
+
+
+    <TextView
         android:layout_width="match_parent"
-        android:layout_height="260sp">
+        android:layout_height="wrap_content"
+        android:fontFamily="serif"
+        android:gravity="center"
+        android:text="@string/discrete_mathematics"
+        android:textColor="@color/black"
+        android:textSize="30sp"
+        android:textStyle="bold|italic"
+        android:padding="16dp" />
+
+    <!-- GridLayout for Neumorphism Cards -->
+
+    <GridLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:columnCount="1"
+        android:layout_margin="@dimen/_50sdp"
+        android:alignmentMode="alignMargins"
+        android:rowOrderPreserved="false"
+        android:useDefaultMargins="true">
 
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="166dp"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginStart="43dp"
-            android:layout_marginTop="53dp"
-            android:layout_marginEnd="49dp"
-            android:layout_marginBottom="41dp"
-            android:fontFamily="serif"
-            android:gravity="center"
-            android:text="@string/mathematical_structure"
-            android:textColor="@color/black"
-            android:textSize="@dimen/_22ssp"
-            android:textStyle="bold|italic" />
 
-
-    </RelativeLayout>
-
- <androidx.constraintlayout.widget.ConstraintLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_below="@+id/first"
-    android:layout_alignParentStart="true"
-    android:layout_alignParentEnd="true"
-    android:layout_alignParentBottom="true"
-    android:layout_marginStart="6dp"
-    android:layout_marginTop="6dp"
-    android:layout_marginEnd="-2dp"
-    android:layout_marginBottom="0dp">
-
-
-    <soup.neumorphism.NeumorphCardView
-        android:id="@+id/paper"
-        android:layout_width="@dimen/_150sdp"
-        android:layout_height="@dimen/_150sdp"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="15dp"
-        app:layout_constraintBottom_toTopOf="@+id/book"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.864"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.16000003"
-        app:neumorph_backgroundColor="#1E88E5">
-
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="50sp"
-            android:fontFamily="cursive"
-            android:gravity="center_horizontal"
-            android:text="Paper"
-            android:textColor="#000000"
-            android:textSize="50sp"
-            android:textStyle="bold" />
-
-        <TextView
-            android:layout_width="match_parent"
+        <!-- Card 2 -  -->
+        <soup.neumorphism.NeumorphCardView
+            android:id="@+id/paper"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="140sp"
-            android:gravity="center"
-            android:paddingLeft="20sp"
-            android:text="Sample Paper"
-            android:textColor="@color/black"
-            android:textSize="17sp" />
-    </soup.neumorphism.NeumorphCardView>
+            android:layout_columnWeight="1"
+            android:layout_rowWeight="1"
+            android:padding="16dp"
+            app:neumorph_backgroundColor="@color/neumorphism_background">
 
-    <soup.neumorphism.NeumorphCardView
-        android:id="@+id/book"
-        android:layout_width="@dimen/_150sdp"
-        android:layout_height="@dimen/_150sdp"
-        android:layout_marginTop="50dp"
-        android:layout_marginEnd="6dp"
-        android:layout_marginBottom="30dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/paper"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0"
-        app:neumorph_backgroundColor="#FB8C00">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:gravity="center">
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:fontFamily="cursive"
-            android:gravity="center"
-            android:text="Book"
-            android:textColor="#000000"
-            android:textSize="43sp"
-            android:textStyle="bold" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="cursive"
+                    android:text="Paper"
+                    android:textColor="#000000"
+                    android:textSize="32sp"
+                    android:textStyle="bold" />
 
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingTop="8dp"
+                    android:text="Sample Paper"
+                    android:textColor="@color/black"
+                    android:textSize="13sp" />
+            </LinearLayout>
+        </soup.neumorphism.NeumorphCardView>
 
-        <TextView
-            android:layout_width="match_parent"
+        <!-- Card 3 -  -->
+        <soup.neumorphism.NeumorphCardView
+            android:id="@+id/book"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="140sp"
-            android:gravity="center"
-            android:text="Study Material"
-            android:textColor="#000000"
-            android:textSize="15sp" />
-    </soup.neumorphism.NeumorphCardView>
+            android:layout_columnWeight="1"
+            android:layout_rowWeight="1"
+            android:padding="16dp"
+            app:neumorph_backgroundColor="@color/neumorphism_background">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:gravity="center">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="cursive"
+                    android:text="Book"
+                    android:textColor="#000000"
+                    android:textSize="32sp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingTop="8dp"
+                    android:text="Study Material"
+                    android:textColor="#000000"
+                    android:textSize="13sp" />
+            </LinearLayout>
+        </soup.neumorphism.NeumorphCardView>
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </GridLayout>
 
-</RelativeLayout>
+</LinearLayout>
