--- a/app/src/main/res/layout/sem1.xml
+++ b/app/src/main/res/layout/sem1.xml
@@ -1,195 +1,178 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/neumorphism_background"
-    tools:context="Sem.Sem1">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
+    android:padding="12dp"
+    tools:context="Sem.Sem1"
+    android:background="@color/neumorphism_background">
 
-    <RelativeLayout
-        android:id="@+id/first"
+
+
+    <TextView
         android:layout_width="match_parent"
-        android:layout_height="260sp">
+        android:layout_height="wrap_content"
+        android:fontFamily="serif"
+        android:gravity="center"
+        android:text="@string/_1st_sem"
+        android:textColor="@color/black"
+        android:textSize="32sp"
+        android:textStyle="bold|italic"
+        android:padding="16dp" />
 
+        <!-- GridLayout for Neumorphism Cards -->
 
-        <TextView
-            android:layout_width="332dp"
-            android:layout_height="171dp"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginStart="40dp"
-            android:layout_marginLeft="40sp"
-            android:layout_marginTop="40dp"
-            android:layout_marginEnd="60dp"
-            android:layout_marginBottom="49dp"
-            android:fontFamily="serif"
-            android:gravity="center"
-            android:text="@string/_1st_sem"
-            android:textColor="@color/black"
-            android:textSize="40sp"
-            android:textStyle="bold|italic" />
-
-
-
-
-    </RelativeLayout>
-
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <GridLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@+id/first"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="4dp"
-        android:layout_marginTop="0dp"
-        android:layout_marginBottom="3dp">
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:columnCount="2"
+        android:alignmentMode="alignMargins"
+        android:rowOrderPreserved="false"
+        android:useDefaultMargins="true">
 
-        <soup.neumorphism.NeumorphCardView
-            android:id="@+id/c"
-            android:layout_width="@dimen/_150sdp"
-            android:layout_height="@dimen/_150sdp"
-            android:layout_marginTop="80dp"
-            android:layout_marginEnd="1dp"
-            android:layout_marginBottom="15dp"
-            app:layout_constraintBottom_toTopOf="@+id/statistics"
-            app:layout_constraintEnd_toStartOf="@+id/english"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:neumorph_backgroundColor="#3EC11A">
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:fontFamily="cursive"
-                android:gravity="center"
-                android:text="C"
-                android:textColor="#000000"
-                android:textSize="50sp"
-                android:textStyle="bold" />
-
-
-            <TextView
-                android:layout_width="match_parent"
+            <!-- Card 1 - C -->
+            <soup.neumorphism.NeumorphCardView
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="130sp"
-                android:gravity="center"
-                android:text="C Programming"
-                android:textColor="@color/black"
-                android:textSize="20sp" />
-        </soup.neumorphism.NeumorphCardView>
+                android:layout_columnWeight="1"
+                android:layout_rowWeight="1"
+                app:neumorph_backgroundColor="@color/neumorphism_background">
 
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical"
+                    android:id="@+id/c"
+                    android:gravity="center">
 
-        <soup.neumorphism.NeumorphCardView
-            android:id="@+id/english"
-            android:layout_width="@dimen/_150sdp"
-            android:layout_height="@dimen/_150sdp"
-            android:layout_marginTop="80dp"
-            android:layout_marginEnd="1dp"
-            android:layout_marginBottom="15dp"
-            app:layout_constraintBottom_toTopOf="@+id/cfcs"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/c"
-            app:layout_constraintTop_toTopOf="parent"
-            app:neumorph_backgroundColor="#1E88E5">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="cursive"
+                        android:text="C"
+                        android:textColor="#000000"
+                        android:textSize="40sp"
+                        android:textStyle="bold" />
 
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:paddingTop="8dp"
+                        android:text="C Programming"
+                        android:textColor="@color/black"
+                        android:textSize="14sp" />
+                </LinearLayout>
+            </soup.neumorphism.NeumorphCardView>
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginTop="50sp"
-                android:fontFamily="cursive"
-                android:gravity="center_horizontal"
-                android:text="English"
-                android:textColor="#000000"
-                android:textSize="50sp"
-                android:textStyle="bold" />
-
-            <TextView
-                android:layout_width="match_parent"
+            <!-- Card 2 - English -->
+            <soup.neumorphism.NeumorphCardView
+                android:id="@+id/english"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="140sp"
-                android:gravity="center"
-                android:text="English Compulsary"
-                android:textColor="@color/black"
-                android:textSize="17sp" />
-        </soup.neumorphism.NeumorphCardView>
+                android:layout_columnWeight="1"
+                android:layout_rowWeight="1"
+                android:padding="16dp"
+                app:neumorph_backgroundColor="@color/neumorphism_background">
 
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical"
+                    android:gravity="center">
 
-        <soup.neumorphism.NeumorphCardView
-            android:id="@+id/statistics"
-            android:layout_width="@dimen/_150sdp"
-            android:layout_height="@dimen/_150sdp"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="15dp"
-            android:layout_marginEnd="2dp"
-            android:layout_marginBottom="65dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/cfcs"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/c"
-            app:neumorph_backgroundColor="#FB8C00">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="cursive"
+                        android:text="English"
+                        android:textColor="#000000"
+                        android:textSize="32sp"
+                        android:textStyle="bold" />
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:fontFamily="cursive"
-                android:gravity="center"
-                android:text="Statistics"
-                android:textColor="#000000"
-                android:textSize="43sp"
-                android:textStyle="bold" />
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:paddingTop="8dp"
+                        android:text="English Compulsory"
+                        android:textColor="@color/black"
+                        android:textSize="13sp" />
+                </LinearLayout>
+            </soup.neumorphism.NeumorphCardView>
 
-
-            <TextView
-                android:layout_width="match_parent"
+            <!-- Card 3 - Statistics -->
+            <soup.neumorphism.NeumorphCardView
+                android:id="@+id/statistics"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="140sp"
-                android:gravity="center"
-                android:text="Mathematical Statistics"
-                android:textColor="#000000"
-                android:textSize="15sp" />
-        </soup.neumorphism.NeumorphCardView>
+                android:layout_columnWeight="1"
+                android:layout_rowWeight="1"
+                android:padding="16dp"
+                app:neumorph_backgroundColor="@color/neumorphism_background">
 
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical"
+                    android:gravity="center">
 
-        <soup.neumorphism.NeumorphCardView
-            android:id="@+id/cfcs"
-            android:layout_width="@dimen/_150sdp"
-            android:layout_height="@dimen/_150sdp"
-            android:layout_marginTop="15dp"
-            android:layout_marginEnd="15dp"
-            android:layout_marginBottom="65dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/statistics"
-            app:layout_constraintTop_toBottomOf="@+id/english"
-            app:neumorph_backgroundColor="#E53935">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="cursive"
+                        android:text="Statistics"
+                        android:textColor="#000000"
+                        android:textSize="32sp"
+                        android:textStyle="bold" />
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:fontFamily="cursive"
-                android:gravity="center"
-                android:text="CFCS"
-                android:textColor="#000000"
-                android:textSize="50sp"
-                android:textStyle="bold" />
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:paddingTop="8dp"
+                        android:text="Mathematical Statistics"
+                        android:textColor="#000000"
+                        android:textSize="13sp" />
+                </LinearLayout>
+            </soup.neumorphism.NeumorphCardView>
 
-
-            <TextView
-                android:layout_width="wrap_content"
+            <!-- Card 4 - CFCS -->
+            <soup.neumorphism.NeumorphCardView
+                android:id="@+id/cfcs"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="130sp"
-                android:gravity="center"
-                android:text="Computer Fundamentals and Computing Software"
-                android:textColor="#000000"
-                android:textSize="13sp" />
-        </soup.neumorphism.NeumorphCardView>
+                android:layout_columnWeight="1"
+                android:layout_rowWeight="1"
+                android:padding="16dp"
+                app:neumorph_backgroundColor="@color/neumorphism_background">
 
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical"
+                    android:gravity="center">
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="cursive"
+                        android:text="CFCS"
+                        android:textColor="#000000"
+                        android:textSize="40sp"
+                        android:textStyle="bold" />
 
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:paddingTop="8dp"
+                        android:gravity="center"
+                        android:text="Computer Fundamentals and Computing Software"
+                        android:textColor="#000000"
+                        android:textSize="16sp" />
+                </LinearLayout>
+            </soup.neumorphism.NeumorphCardView>
 
-</RelativeLayout>
+        </GridLayout>
+
+</LinearLayout>
