--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -69,7 +69,11 @@
     </style>
 
     <style name="mainhome" parent="Theme.MaterialComponents.Light.NoActionBar.Bridge">
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowActionBar">false</item>
+        <item name="android:windowFullscreen">true</item>
 
+        <item name="android:windowContentOverlay">@null</item>
             <item name="android:statusBarColor">@color/neumorphism_background</item>
     </style>
 </resources>
